# news-rag

./: .gitignore  Dockerfile  README.md  alembic.ini  demo_evaluation.py  demo_ingestion.py  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: endpoints.py  evaluation_endpoints.py  topic_endpoints.py
app/core/: config.py  scheduler.py  security.py
app/db/: session.py
app/models/: __init__.py  article.py  evaluation.py  topic.py
app/schemas/: article.py  evaluation.py  topic.py
app/services/: evaluation_service.py  ingestion_service.py  llm_service.py  scheduled_ingestion_service.py  search_service.py
app/utils/: evaluation_automation.py  topic_loader.py
config/: topics.yaml
docs/: EVALUATION_FRAMEWORK.md
migrations/: env.py
migrations/versions/: 001_enable_pgvector.py  002_create_articles_schema.py  003_add_topic_management.py  004_add_evaluation_schema.py
scripts/: evaluation_demo.py  init_golden_dataset.py
tests/: conftest.py  test_api_endpoints.py  test_api_topics.py  test_config.py  test_evaluation_endpoints.py  test_evaluation_service.py  test_ingestion_service.py  test_llm_service.py  test_models_topic.py  test_scheduled_ingestion_service.py  test_scheduler.py  test_schemas.py  test_search_service.py  test_security.py  test_system_endpoints.py
